realtime fixed title

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -67,14 +67,14 @@
     </script>
 </head>
 <body>
-    <div class="subtitle section make-it-dart make-it-white-back">Product List - Realtime display</div>
+    <div class="subtitle section make-it-dark make-it-white-back">Product List - Realtime display</div>
     <div class="section">
         
         <div id="productList"></div>
         <br>
         <div class="grid-container-3c-by-1r make-it-rounded make-it-white-back make-it-dark">
             <button class="button is-danger" onclick="changePage(-1)">Prev</button>
-            <div class="content make-it-dark make-it-rounded-top make-it-center section" id="productCount"></div>
+            <div class="content make-it-dark make-it-semi-back make-it-rounded make-it-center section" id="productCount"></div>
             <button class="button is-success" onclick="changePage(1)">Next</button>
         </div>
         
