--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
 <body class="splash-page-home">
     <header>
-        <h2 class="title-bar-container make-it-semi-back make-it-dark">BE Product server</h2>
+        <h2 class="title-bar-container make-it-semi-back make-it-dark is-frozen">BE Product Server</h2>
     </header>
 
     <main>
