Return point 1 (Problema con mongoosePaginate)

--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="subtitle section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Product List - Static view</h2>
+    <h2 class="subtitle section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Product List</h2>
     
     <!-- Sorting and Pagination Controls at the top -->
     <section class="section">
@@ -20,14 +20,19 @@
                     <div class="column is-12">
                         <div class="make-it-semi-back make-it-center">
                             <div class="make-it-semi-back make-it-center section">Sort by</div>
-                            <a class="button" href="?page=1&limit={{limit}}&sort=title&sortOrder=asc">Title asc</a>
-                            <a class="button" href="?page=1&limit={{limit}}&sort=title&sortOrder=desc">Title desc</a>
-                            <a class="button" href="?page=1&limit={{limit}}&sort=price&sortOrder=asc">Price asc</a>
-                            <a class="button" href="?page=1&limit={{limit}}&sort=price&sortOrder=desc">Price desc</a>
-                            <a class="button" href="?page=1&limit={{limit}}&sort=stock&sortOrder=asc">Stock asc</a>
-                            <a class="button" href="?page=1&limit={{limit}}&sort=stock&sortOrder=desc">Stock desc</a>
+                            <a class="button" href="?page=1&limit={{limit}}&sort=title&sortOrder=asc" 
+                               {{#if (eq sort 'title')}}{{#if (eq sortOrder 'asc')}}class="is-active"{{/if}}{{/if}}>Title asc</a>
+                            <a class="button" href="?page=1&limit={{limit}}&sort=title&sortOrder=desc" 
+                               {{#if (eq sort 'title')}}{{#if (eq sortOrder 'desc')}}class="is-active"{{/if}}{{/if}}>Title desc</a>
+                            <a class="button" href="?page=1&limit={{limit}}&sort=price&sortOrder=asc" 
+                               {{#if (eq sort 'price')}}{{#if (eq sortOrder 'asc')}}class="is-active"{{/if}}{{/if}}>Price asc</a>
+                            <a class="button" href="?page=1&limit={{limit}}&sort=price&sortOrder=desc" 
+                               {{#if (eq sort 'price')}}{{#if (eq sortOrder 'desc')}}class="is-active"{{/if}}{{/if}}>Price desc</a>
+                            <a class="button" href="?page=1&limit={{limit}}&sort=stock&sortOrder=asc" 
+                               {{#if (eq sort 'stock')}}{{#if (eq sortOrder 'asc')}}class="is-active"{{/if}}{{/if}}>Stock asc</a>
+                            <a class="button" href="?page=1&limit={{limit}}&sort=stock&sortOrder=desc" 
+                               {{#if (eq sort 'stock')}}{{#if (eq sortOrder 'desc')}}class="is-active"{{/if}}{{/if}}>Stock desc</a>
                         </div>
-
                     </div>
 
                     <!-- Limit Dropdown -->
@@ -70,15 +75,14 @@
                                 <li>
                                     <a class="pagination-link" 
                                     href="?page={{this}}&limit={{../limit}}&sort={{../sort}}&sortOrder={{../sortOrder}}" 
-                                    {{#if (eq this @root.currentPage)}}aria-current="page"{{/if}}>{{this}}</a>
+                                    {{#if (eq this ../currentPage)}}aria-current="page"{{/if}}>{{this}}</a>
                                 </li>
                             {{/each}}
                         </ul>
                     </div>
                 </div>
-
-
-
+            </div>
+        </div>
     </section>
 
     <!-- Product List -->
